--- a/.github/workflows/static_build.yml
+++ b/.github/workflows/static_build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run build script
         run: |
           chmod +x ./remote_build.sh
-          ./wedding_web/remote_build.sh
+          ./remote_build.sh
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
